--- a/estilo.css
+++ b/estilo.css
@@ -32,7 +32,7 @@ header h1{
 header p{
     font-size: 14px;
     line-height: 16px;
-    color: rgba(0, 0, 0, 0.7)
+    color: #005346
 }
 
 section{
